@@ -9,16 +9,33 @@ use Test::More;
 
 use CPAN::Changes;
 
+my ( $sample_version, $sample, $release_sample, $group_sample, $sample_changes );
+
 BEGIN {
-  my $sample_version = '0.400002';
-  my $sample         = <<'EOF';
+  $sample_version = '0.500001';
+  $sample         = <<'EOF';
 1.7.5 2013-08-01T09:48:11Z
  [Group]
  - Child Entry Line 1
  - Child Entry Line 2
 EOF
-
-  return if CPAN::Changes->load_string($sample)->serialize eq $sample;
+  $release_sample = <<'EOF';
+1.7.5 2013-08-01T09:48:11Z
+ [Group]
+ - Child Entry Line 1
+ - Child Entry Line 2
+EOF
+  $group_sample = <<'EOF';
+[Group]
+ - Child Entry Line 1
+ - Child Entry Line 2
+EOF
+  $sample_changes = CPAN::Changes->load_string($sample);
+  return if $ENV{AUTHOR_TESTING};
+  return
+        if $sample_changes->serialize eq $sample
+    and $sample_changes->release('1.7.5')->serialize eq $release_sample
+    and $sample_changes->release('1.7.5')->get_group('Group')->serialize eq $group_sample;
   plan
     skip_all => sprintf "Serialization scheme of CPAN::Changes %s is different to that of %s",
     $CPAN::Changes::VERSION, $sample_version;
@@ -29,6 +46,10 @@ use CPAN::Changes::Group;
 use CPAN::Meta::Prereqs::Diff;
 use CPAN::Changes::Group::Dependencies::Details;
 use Test::Differences qw( eq_or_diff );
+
+eq_or_diff( $sample_changes->serialize,                                       $sample,         'Guard: Whole file same' );
+eq_or_diff( $sample_changes->release('1.7.5')->serialize,                     $release_sample, 'Guard: release same' );
+eq_or_diff( $sample_changes->release('1.7.5')->get_group('Group')->serialize, $group_sample,   'Guard: group same' );
 
 my $release = CPAN::Changes::Release->new(
   version => '0.01',
@@ -73,7 +94,7 @@ $details_b->serialize;
 
 {
   my $expected = <<'EOF';
- [Added / runtime requires]
+[Added / runtime requires]
  - Moo 1.0
 EOF
 
@@ -85,7 +106,6 @@ $release->attach_group($details_a) if $details_a->has_changes;
 0.01 2014-07-26
  [Added / runtime requires]
  - Moo 1.0
-
 EOF
 
   eq_or_diff( $release->serialize, $expected, 'Release serialization' );
