@@ -1,6 +1,9 @@
 Release history for CPAN-Changes-Group-Dependencies-Details
 
 {{$NEXT}}
+ [BugFix]
+ - Guard further against CPAN::Changes serializer changes breaking tests
+ - Write tests for (pending) 0.5 serializer.
 
 0.001004 2015-06-21T19:47:27Z 93c2d1a
  [BugFix]
